--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.54.0",
     "@tanstack/react-query": "^5.84.2",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "^1.8.8",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.539.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.0",
     "react-window": "^1.8.11"
   },
   "devDependencies": {
